[package]
name = "brn"
version = "0.1.0"
authors = ["Chris Burt-Brown <brokenbeta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
die = "0.2.0"
confy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
getch = "0.2.1"
