[package]
name = "brnt"
version = "0.1.0"
authors = ["Chris Burt-Brown <brokenbeta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
confy = "0.4.0"
getch = "0.2.1"
glob = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serial_test = "*"
